# docs/swagger.json
@@ -9,6 +9,46 @@
     "host": "localhost:8080",
     "basePath": "/v1",
     "paths": {
+        "/study-set": {
+            "post": {
+                "description": "Create a new study set",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "study-set"
+                ],
+                "summary": "Create a new study set",
+                "parameters": [
+                    {
+                        "description": "StudySet object that needs to be created",
+                        "name": "studySet",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.StudySet"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/model.StudySet"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/common.ErrResp"
+                        }
+                    }
+                }
+            }
+        },
         "/upload": {
             "post": {
                 "description": "Upload file to S3",
@@ -334,6 +374,69 @@
                 },
                 "width": {
                     "type": "integer"
+                }
+            }
+        },
+        "model.Flashcard": {
+            "type": "object",
+            "required": [
+                "definition",
+                "term"
+            ],
+            "properties": {
+                "created_at": {
+                    "type": "string"
+                },
+                "definition": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "image": {
+                    "$ref": "#/definitions/common.Image"
+                },
+                "study_set_id": {
+                    "type": "string"
+                },
+                "term": {
+                    "type": "string"
+                },
+                "updated_at": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.StudySet": {
+            "type": "object",
+            "required": [
+                "set_name",
+                "user_id"
+            ],
+            "properties": {
+                "created_at": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "flashcards": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/model.Flashcard"
+                    }
+                },
+                "id": {
+                    "type": "string"
+                },
+                "set_name": {
+                    "type": "string"
+                },
+                "updated_at": {
+                    "type": "string"
+                },
+                "user_id": {
+                    "type": "string"
                 }
             }
         },
